--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Гавная</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="styles/objects_style.css">
+    <link rel="stylesheet" href="styles/position_style.css">
+    <link rel="stylesheet" href="styles/dlc.css">
+    <title>Главная</title>
 </head>
 <body>
 
