--- a/index.html
+++ b/index.html
@@ -9,6 +9,22 @@
     <title>Главная</title>
 </head>
 <body>
-
+	<main>
+		<div class="container object_center">
+			<h1>Бесплатные курсы по языку Python</h1>
+			<h6>за бутылку пива</h6>
+		</div>
+		<div class="container">
+			<div class="card_list">
+				<div class="card-container">
+					<a href="math-game/main.html" class="card">
+						<h3>Математическая игра</h3>
+						<h4>Создание простой математической игры с помощью Tkinter</h4>
+					</a>
+				</div>
+			</div>
+		</div>
+	</main>
+	<footer></footer>
 </body>
 </html>
