--- a/math-game/main.html
+++ b/math-game/main.html
@@ -6,6 +6,18 @@
 	<title>Математическая игра</title>
 </head>
 <body>
+	<header>
+		<input type="checkbox" id="menu-toggle">
+		<label for="menu-toggle" class="open-btn">&#9776;</label>
+		<div class="menu">
+			<label for="menu-toggle" class="close-btn">&times;</label>
+			<a href="#">Ссылка 1</a>
+			<a href="#">Ссылка 2</a>
+			<a href="#">Ссылка 3</a>
+			<a href="#">Ссылка 4</a>
+		</div>
+		<a  style="margin-top: 20px" href="../index.html" class="ico_button"><img src="../icons/home.svg" alt=""></a>
+	</header>
 
 </body>
 </html>
