--- a/math-game/main.html
+++ b/math-game/main.html
@@ -3,6 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="../styles/objects_style.css">
+	<link rel="stylesheet" href="../styles/position_style.css">
+	<link rel="stylesheet" href="../styles/menu.css">
 	<title>Математическая игра</title>
 </head>
 <body>
