--- a/math-game/main.html
+++ b/math-game/main.html
@@ -22,5 +22,9 @@
 		<a  style="margin-top: 20px" href="../index.html" class="ico_button"><img src="../icons/home.svg" alt=""></a>
 	</header>
 
+	<main></main>
+
+	<footer></footer>
+
 </body>
 </html>
