добавлены новые объекты

--- a/math-game/main.html
+++ b/math-game/main.html
@@ -22,7 +22,21 @@
 		<a  style="margin-top: 20px" href="../index.html" class="ico_button"><img src="../icons/home.svg" alt=""></a>
 	</header>
 
-	<main></main>
+	<main>
+		<div class="container object_center">
+			<h1>Математическая игра</h1>
+			<h4>За этот курс, будет создано оконное приложение на python с исползованием Tkinter</h4>
+		</div>
+
+		<div class="container">
+			<div class="card_list">
+				<a href="math-game/main.html" class="card">
+					<h4>1 задание</h4>
+					<h5>Начало работы</h5>
+				</a>
+			</div>
+		</div>
+	</main>
 
 	<footer></footer>
 
