добавлены новые стили для мобильных устройств

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="styles/objects_style.css">
     <link rel="stylesheet" href="styles/position_style.css">
     <link rel="stylesheet" href="styles/dlc.css">
+    <link rel="stylesheet" href="styles/mobile_style.css">
     <title>Главная</title>
 </head>
 <body>
