Исправлена ошибка в добавлении стилей

--- a/math-game/main.html
+++ b/math-game/main.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="../styles/objects_style.css">
 	<link rel="stylesheet" href="../styles/position_style.css">
 	<link rel="stylesheet" href="../styles/menu.css">
-	<link rel="stylesheet" href="styles/mobile_style.css">
+	<link rel="stylesheet" href="../styles/mobile_style.css">
 	<title>Математическая игра</title>
 </head>
 <body>
